<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DatePickerDemo</string>
    <string name="date">Choose Date</string>
    <string name="action_settings">Settings</string>
    <string name="set">Select This Date</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">Back</string>
    <string name="hide">Hide</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_list">Deserts</string>
    <string name="title_activity_date">Date Picker</string>
    <string name="title_activity_keyboard">Profile</string>
    <string name="menuTitle"></string>

    <string-array name="activities">
        <item>Date Picker</item>
        <item>Profile</item>
        <item>Deserts</item>
    </string-array>
    <string-array name="Deserts">
        <item>Cupcake</item>
        <item>Donut</item>
        <item>Gingerbread</item>
        <item>Ice Cream</item>
        <item>Jelly Bean</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">App</string>
    <string name="select">Select</string>
    <string name="delete_desert">Delete</string>
    <string name="edit_desert">Edit</string>
    <string name="title_activity_aaa">aaa</string>

</resources>
