<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linear_layout"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.sdsu.cs646.shameetha818455307.datepickerdemo.KeyboardActivity"
                android:orientation="vertical"
                android:gravity="center_vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/backButton"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide"
            android:id="@+id/hide_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="onClick"/>
    </LinearLayout>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstField"
        android:inputType="text"
        android:layout_weight=".125"
        android:hint="@string/details"
        android:imeOptions="actionNext"
        android:gravity="bottom"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:inputType="text|textPersonName"
        android:layout_weight=".4"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:gravity="bottom"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_weight="1"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:gravity="center_vertical|bottom"/>
</LinearLayout>
